[metadata]
name = htrc_topicexplorer
author = The Indiana Philosophy Ontology (InPhO) Project
author_email = inpho@indiana.edu
maintainer = Jaimie Murdock
maintainer_email = jaimie@inphoproject.org
home-page = https://www.hypershelf.org
download-url = http://github.com/inpho/topic-explorer
summary = InPhO Topic Explorer
license = MIT License
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Bottle
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: User Interfaces
    Topic :: Text Processing :: Linguistic
keywords =
    topic modeling
    lda
    visualization

[files]
packages =
    htrc_topicexplorer
data_files =
    opt/htrc-topic-explorer = topics.zip
    opt/htrc-topic-explorer/www = www/*
    opt/htrc-topic-explorer/demo = demo/*
    opt/htrc-topic-explorer/ipynb = ipynb/*
    opt/htrc-topic-explorer/mmseg = mmseg/*

[options]
zip_safe = False
include_package_data = True

[entry_points]
console_scripts =
    vsm = topicexplorer.__main__:vsm
    htrc-topicexplorer = topicexplorer.__main__:main
    htutils = topicexplorer.lib.hathitrust:main

[extras]
inpho =
    inpho
    sqlalchemy
htrc =
    htrc-feature-reader>=1.92
    htrc

[bdist_wheel]
universal=1

